# comparative-abusive-lang

./: .gitignore  Dockerfile  Makefile  README.md  data_preprocess.py  docker-compose.yml  helper.py  pyproject.toml  requirements.txt
data/crawled/: ID-Text.csv  ID-Type.csv  ID-contextID.csv  data.pkl  log.txt
data/preprocessed/char/: data_splits.pkl
data/preprocessed/word/: data_splits.pkl  embedding.npy  vocab.pkl
data/preprocessed/word/0/: test_CtxtText_InputText.npy  test_Label.npy  train_CtxtText_InputText.npy  train_Label.npy  valid_CtxtText_InputText.npy  valid_Label.npy
data/preprocessed/word/1/: test_CtxtText_InputText.npy  test_Label.npy  train_CtxtText_InputText.npy  train_Label.npy  valid_CtxtText_InputText.npy  valid_Label.npy
data/preprocessed/word/2/: test_CtxtText_InputText.npy  test_Label.npy  train_CtxtText_InputText.npy  train_Label.npy  valid_CtxtText_InputText.npy  valid_Label.npy
data/preprocessed/word/3/: test_CtxtText_InputText.npy  test_Label.npy  train_CtxtText_InputText.npy  train_Label.npy  (+1 more)
model/: encodeVocab.py  evaluate_ml.py  models_cnn.py  models_rnn.py  reference_script_train.sh  rnn_util.py  train.py  train_cnn.py  train_ml.py  train_ml_models.py  train_rnn.py  train_rnn_char.py  train_rnn_ctx.py  wrapper_ml.py  wrapper_nn.py
model/layers/: CNN_layers.py  CNN_models.py  RNN_evaluation.py  RNN_layers.py  RNN_model_GRU.py  RNN_model_bi.py  RNN_model_bi_ctx.py  RNN_model_layers.py  RNN_model_ltc.py  RNN_params.py  RNN_process_data.py  RNN_process_data_char.py  RNN_process_data_ctx.py
model/utils/: rnn.py
(+34 files in other folders)
