[tool.poetry]
name = "comparative-abusive-lang"
version = "0.1.0"
description = ""
authors = ["ryoya ito <110ryoya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
nltk = "^3.5"
sklearn = "^0.0"
wordsegment = "1.2.0"
pandas = "^1.0.5"
keras = "^2.4.3"
transformers = "^3.5.1"
helper = "^2.4.2"
tensorflow = "^2.3.1"
tf-slim = "^1.1.0"
tensorflow-hub = "^0.10.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
